--- a/.github/workflows/ci-cd.dev.yml
+++ b/.github/workflows/ci-cd.dev.yml
@@ -20,169 +20,169 @@ env:
   DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
 
 jobs:
-  # # Job de construction de l'application
-  # build:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v3 # Vérifie le code source de la branche cible
+  # Job de construction de l'application
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3 # Vérifie le code source de la branche cible
 
-  #     - name: Run end-to-end tests
-  #       run: |
-  #         # Définit les variables d'environnement nécessaires pour les tests end-to-end
-  #         export DATABASE_URL=postgresql://dev:tT8s758l79WDINR8tKHtfKBr1oiWXpWY@dpg-cr7ervi3esus7388bamg-a.frankfurt-postgres.render.com/dev_db_satsquare
-  #         export NEXTAUTH_SECRET="CP912ECDSClsdezoPDZCMSJXCPISJCIY20SmfdsFOYDflHZORdsvdsFOZIRGOIZHGOURHZ"
-  #         export NEXT_PUBLIC_LNURL_AUTH_PUBLIC_KEY="02c3b844b8104f0c1b15c507774c9ba7fc609f58f343b9b149122e944dd20c9362"
-  #         export NEXT_PUBLIC_SITE_URL="http://localhost:3000"
-  #         export NEXT_PUBLIC_SOCKET_URL="ws://localhost:5157"
-  #         export REDIS_URL="redis://localhost:6379"
-  #         cd ./satsquare
+      - name: Run end-to-end tests
+        run: |
+          # Définit les variables d'environnement nécessaires pour les tests end-to-end
+          export DATABASE_URL=postgresql://dev:tT8s758l79WDINR8tKHtfKBr1oiWXpWY@dpg-cr7ervi3esus7388bamg-a.frankfurt-postgres.render.com/dev_db_satsquare
+          export NEXTAUTH_SECRET="CP912ECDSClsdezoPDZCMSJXCPISJCIY20SmfdsFOYDflHZORdsvdsFOZIRGOIZHGOURHZ"
+          export NEXT_PUBLIC_LNURL_AUTH_PUBLIC_KEY="02c3b844b8104f0c1b15c507774c9ba7fc609f58f343b9b149122e944dd20c9362"
+          export NEXT_PUBLIC_SITE_URL="http://localhost:3000"
+          export NEXT_PUBLIC_SOCKET_URL="ws://localhost:5157"
+          export REDIS_URL="redis://localhost:6379"
+          cd ./satsquare
 
-  #         # Installation des dépendances et préparation de l'application
-  #         npm install
-  #         npx prisma generate
-  #         npx prisma db push
-  #         npm run seed
-  #         npm run build
+          # Installation des dépendances et préparation de l'application
+          npm install
+          npx prisma generate
+          npx prisma db push
+          npm run seed
+          npm run build
 
-  # # Job de linting du code source
-  # lint:
-  #   needs: [build]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v3
+  # Job de linting du code source
+  lint:
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-  #     - name: Install dependencies
-  #       run: |
-  #         cd ./satsquare
-  #         npm ci # Installation des dépendances
+      - name: Install dependencies
+        run: |
+          cd ./satsquare
+          npm ci # Installation des dépendances
 
-  #     - name: Run Linting
-  #       run: |
-  #         cd ./satsquare
-  #         npm run lint # Exécute le linting
+      - name: Run Linting
+        run: |
+          cd ./satsquare
+          npm run lint # Exécute le linting
 
-  # # Job pour les tests unitaires
-  # unit-tests:
-  #   needs: [build]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v3
+  # Job pour les tests unitaires
+  unit-tests:
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-  #     - name: Install dependencies
-  #       run: |
-  #         cd ./satsquare
-  #         npm ci
-  #         npm i jest-environment-jsdom jest # Installe Jest pour les tests unitaires
+      - name: Install dependencies
+        run: |
+          cd ./satsquare
+          npm ci
+          npm i jest-environment-jsdom jest # Installe Jest pour les tests unitaires
 
-  #     - name: Run Jest Unit Tests
-  #       run: |
-  #         cd ./satsquare
-  #         npm run test # Exécute les tests unitaires
+      - name: Run Jest Unit Tests
+        run: |
+          cd ./satsquare
+          npm run test # Exécute les tests unitaires
 
-  # # Job pour les tests end-to-end
-  # e2e-tests:
-  #   needs: [build]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v3
+  # Job pour les tests end-to-end
+  e2e-tests:
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-  #     - name: Run end-to-end tests
-  #       run: |
-  #         # Définit les variables d'environnement nécessaires pour les tests end-to-end
-  #         export DATABASE_URL=postgresql://dev:tT8s758l79WDINR8tKHtfKBr1oiWXpWY@dpg-cr7ervi3esus7388bamg-a.frankfurt-postgres.render.com/dev_db_satsquare
-  #         export NEXTAUTH_SECRET="CP912ECDSClsdezoPDZCMSJCIY20SmfdsFOYDflHZORdsvdsFOZIRGOIZHGOURHZ"
-  #         export NEXT_PUBLIC_LNURL_AUTH_PUBLIC_KEY="02c3b844b8104f0c1b15c507774c9ba7fc609f58f343b9b149122e944dd20c9362"
-  #         export NEXT_PUBLIC_SITE_URL="http://localhost:3000"
-  #         export NEXT_PUBLIC_SOCKET_URL="ws://localhost:5157"
-  #         export REDIS_URL="redis://localhost:6379"
-  #         cd ./satsquare
+      - name: Run end-to-end tests
+        run: |
+          # Définit les variables d'environnement nécessaires pour les tests end-to-end
+          export DATABASE_URL=postgresql://dev:tT8s758l79WDINR8tKHtfKBr1oiWXpWY@dpg-cr7ervi3esus7388bamg-a.frankfurt-postgres.render.com/dev_db_satsquare
+          export NEXTAUTH_SECRET="CP912ECDSClsdezoPDZCMSJCIY20SmfdsFOYDflHZORdsvdsFOZIRGOIZHGOURHZ"
+          export NEXT_PUBLIC_LNURL_AUTH_PUBLIC_KEY="02c3b844b8104f0c1b15c507774c9ba7fc609f58f343b9b149122e944dd20c9362"
+          export NEXT_PUBLIC_SITE_URL="http://localhost:3000"
+          export NEXT_PUBLIC_SOCKET_URL="ws://localhost:5157"
+          export REDIS_URL="redis://localhost:6379"
+          cd ./satsquare
 
-  #         # Installation des dépendances et préparation de l'application pour les tests end-to-end
-  #         npm install
-  #         npx prisma generate
-  #         npx prisma db push
-  #         npm run seed
-  #         npm run build
-  #         # npm run test:e2e # Désactivé pour l'instant
+          # Installation des dépendances et préparation de l'application pour les tests end-to-end
+          npm install
+          npx prisma generate
+          npx prisma db push
+          npm run seed
+          npm run build
+          # npm run test:e2e # Désactivé pour l'instant
 
-  # # Job pour la vérification des vulnérabilités des dépendances
-  # deps-vulnerability:
-  #   needs: [e2e-tests, build, unit-tests]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v3
+  # Job pour la vérification des vulnérabilités des dépendances
+  deps-vulnerability:
+    needs: [e2e-tests, build, unit-tests]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-  #     - name: Create lock file
-  #       run: |
-  #         cd ./satsquare
-  #         npm install --package-lock-only # Génère uniquement le fichier package-lock
+      - name: Create lock file
+        run: |
+          cd ./satsquare
+          npm install --package-lock-only # Génère uniquement le fichier package-lock
 
-  #     - name: Install dependencies
-  #       run: |
-  #         cd ./satsquare
-  #         npm ci
-  #         npm update # Met à jour les dépendances
+      - name: Install dependencies
+        run: |
+          cd ./satsquare
+          npm ci
+          npm update # Met à jour les dépendances
 
-  #     - name: Install jest-environment-jsdom
-  #       run: |
-  #         cd ./satsquare
-  #         npm install jest-environment-jsdom --save-dev # Installe une dépendance spécifique pour les tests
+      - name: Install jest-environment-jsdom
+        run: |
+          cd ./satsquare
+          npm install jest-environment-jsdom --save-dev # Installe une dépendance spécifique pour les tests
 
-  #     - name: Audit npm dependencies
-  #       run: |
-  #         cd ./satsquare
-  #         npm audit --audit-level=moderate # Audite les dépendances npm pour les vulnérabilités
+      - name: Audit npm dependencies
+        run: |
+          cd ./satsquare
+          npm audit --audit-level=moderate # Audite les dépendances npm pour les vulnérabilités
 
-  # # Job pour la couverture de code avec Codecov
-  # codecov:
-  #   needs: [e2e-tests, build, unit-tests]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v3
+  # Job pour la couverture de code avec Codecov
+  codecov:
+    needs: [e2e-tests, build, unit-tests]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-  #     - name: Install dependencies
-  #       run: |
-  #         cd ./satsquare
-  #         npm ci
-  #         npm i jest-environment-jsdom jest # Installe les dépendances nécessaires pour les tests
+      - name: Install dependencies
+        run: |
+          cd ./satsquare
+          npm ci
+          npm i jest-environment-jsdom jest # Installe les dépendances nécessaires pour les tests
 
-  #     - name: Run tests and generate coverage report
-  #       run: |
-  #         cd ./satsquare
-  #         npm run test -- --coverage # Exécute les tests avec rapport de couverture
+      - name: Run tests and generate coverage report
+        run: |
+          cd ./satsquare
+          npm run test -- --coverage # Exécute les tests avec rapport de couverture
 
-  #     - name: Upload coverage to Codecov
-  #       uses: codecov/codecov-action@v3
-  #       with:
-  #         token: ${{ secrets.CODECOV_TOKEN }} # Utilise le token secret pour l'authentification
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }} # Utilise le token secret pour l'authentification
 
-  # # Job pour l'analyse de performance avec Lighthouse
-  # lighthouse:
-  #   needs: [codecov, deps-vulnerability]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v3
+  # Job pour l'analyse de performance avec Lighthouse
+  lighthouse:
+    needs: [codecov, deps-vulnerability]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-  #     - name: Install dependencies
-  #       run: |
-  #         cd ./satsquare
-  #         npm install # Installe les dépendances nécessaires
+      - name: Install dependencies
+        run: |
+          cd ./satsquare
+          npm install # Installe les dépendances nécessaires
 
-  #     - name: Run Lighthouse CI
-  #       run: |
-  #         cd ./satsquare
-  #         npx lhci autorun # Exécute Lighthouse CI pour l'analyse de performance
+      - name: Run Lighthouse CI
+        run: |
+          cd ./satsquare
+          npx lhci autorun # Exécute Lighthouse CI pour l'analyse de performance
 
   # Job pour construire l'image Docker et la pousser vers le registre
   docker-build:
-    # needs: lighthouse
+    needs: lighthouse
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -223,35 +223,35 @@ jobs:
       - name: Push Docker image to GitHub Container Registry
         run: docker push ghcr.io/ismail-mouyahada/master-satsquare-app:dev-${{ github.sha }} # Pousse l'image Docker vers le registre
 
-  # Job pour notifier l'état de la pipeline sur Discord
-  # notify:
-  #   # needs: [docker-build,lighthouse]
-  #   runs-on: ubuntu-latest
-  #   steps:
+#  Job pour notifier l'état de la pipeline sur Discord
+  notify:
+    needs: [docker-build,lighthouse]
+    runs-on: ubuntu-latest
+    steps:
     
-  #     - name: Notify Discord
-  #       if: success() # Notifie en cas de succès
-  #       uses: discord-actions/message@v2
-  #       with:
-  #         webhookUrl: "https://discord.com/api/webhooks/1278397332521615431/d5AIBE5oEI25FsHe8bXQaXoBYLmZ1voBFxyDjhbjJ1RucDvxXzTeegmNJ0Tc89f4SlH8"
-  #         message: "l'application tourne en développement, félicitations 🎊"
-  #         username: "Dev BOT Satsquare"
-  #         avatar: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR9SYdK1M7jEIJgdj9foHiEoUdUiYxfREv3jg&s"
+      - name: Notify Discord
+        if: success() # Notifie en cas de succès
+        uses: discord-actions/message@v2
+        with:
+          webhookUrl: "https://discord.com/api/webhooks/1278397332521615431/d5AIBE5oEI25FsHe8bXQaXoBYLmZ1voBFxyDjhbjJ1RucDvxXzTeegmNJ0Tc89f4SlH8"
+          message: "l'application tourne en développement, félicitations 🎊"
+          username: "Dev BOT Satsquare"
+          avatar: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR9SYdK1M7jEIJgdj9foHiEoUdUiYxfREv3jg&s"
 
-  #     - name: Notify Discord
-  #       if: failure() # Notifie en cas d'échec
-  #       uses: discord-actions/message@v2
-  #       with:
-  #         webhookUrl: "https://discord.com/api/webhooks/1278397332521615431/d5AIBE5oEI25FsHe8bXQaXoBYLmZ1voBFxyDjhbjJ1RucDvxXzTeegmNJ0Tc89f4SlH8"
-  #         message: "Attention il y a un soucis dans la mis en développement ☣"
-  #         username: "Dev BOT Satsquare"
-  #         avatar: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR9SYdK1M7jEIJgdj9foHiEoUdUiYxfREv3jg&s"
+      - name: Notify Discord
+        if: failure() # Notifie en cas d'échec
+        uses: discord-actions/message@v2
+        with:
+          webhookUrl: "https://discord.com/api/webhooks/1278397332521615431/d5AIBE5oEI25FsHe8bXQaXoBYLmZ1voBFxyDjhbjJ1RucDvxXzTeegmNJ0Tc89f4SlH8"
+          message: "Attention il y a un soucis dans la mis en développement ☣"
+          username: "Dev BOT Satsquare"
+          avatar: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR9SYdK1M7jEIJgdj9foHiEoUdUiYxfREv3jg&s"
 
-  #     - name: Notify Discord
-  #       if: ${{ always() && contains(needs.*.result, 'failure') }} # Notifie si une partie du pipeline a échoué
-  #       uses: discord-actions/message@v2
-  #       with:
-  #         webhookUrl: "https://discord.com/api/webhooks/1278397332521615431/d5AIBE5oEI25FsHe8bXQaXoBYLmZ1voBFxyDjhbjJ1RucDvxXzTeegmNJ0Tc89f4SlH8"
-  #         message: "Une des étapes a due échouée ! 😇"
-  #         username: "Dev BOT Satsquare"
-  #         avatar: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR9SYdK1M7jEIJgdj9foHiEoUdUiYxfREv3jg&s"
+      - name: Notify Discord
+        if: ${{ always() && contains(needs.*.result, 'failure') }} # Notifie si une partie du pipeline a échoué
+        uses: discord-actions/message@v2
+        with:
+          webhookUrl: "https://discord.com/api/webhooks/1278397332521615431/d5AIBE5oEI25FsHe8bXQaXoBYLmZ1voBFxyDjhbjJ1RucDvxXzTeegmNJ0Tc89f4SlH8"
+          message: "Une des étapes a due échouée ! 😇"
+          username: "Dev BOT Satsquare"
+          avatar: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR9SYdK1M7jEIJgdj9foHiEoUdUiYxfREv3jg&s"
